# decklink-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  gen-bindings.sh  wrapper.h
examples/: automatic_mode_detection.rs  list.rs  list_devices.rs  output_colour.rs  output_fading_colour.rs  rp188_vitc_output.rs  status_monitor.rs
sdk/Samples/: Makefile
sdk/Samples/ActivateProfile/: ActivateProfile.cpp  Makefile  platform.cpp  platform.h
sdk/Samples/Capture/: Capture.cpp  Capture.h  Config.cpp  Config.h  Makefile
sdk/Samples/CapturePreview/: AncillaryDataTable.cpp  AncillaryDataTable.h  CapturePreview.cpp  CapturePreview.h  CapturePreview.pro  CapturePreview.ui  CapturePreviewEvents.h  DeckLinkDeviceDiscovery.cpp  DeckLinkDeviceDiscovery.h  DeckLinkInputDevice.cpp  DeckLinkInputDevice.h  DeckLinkOpenGLWidget.h  ProfileCallback.cpp  ProfileCallback.h  com_ptr.h  main.cpp
sdk/Samples/CaptureStills/: Bgra32VideoFrame.cpp  Bgra32VideoFrame.h  CaptureStills.cpp  DeckLinkInputDevice.cpp  DeckLinkInputDevice.h  ImageWriter.h  ImageWriterLinux.cpp  Makefile  platform.cpp  platform.h
sdk/Samples/ClosedCaptions/: CEA708_Commands.cpp  CEA708_Commands.h  CEA708_Encoder.cpp  CEA708_Encoder.h  CEA708_Types.h  Makefile  main.cpp
sdk/Samples/DeviceConfigure/: DeviceConfigure.cpp  Makefile  platform.cpp  platform.h
sdk/Samples/DeviceList/: Makefile  main.cpp  (+2 more)
src/: connectors.rs  device.rs  display_mode.rs  frame.rs  lib.rs  main.rs  sdk.rs  sdk_tests.rs  sys.rs  util.rs
src/device/: attributes.rs  common.rs  mod.rs  notification.rs  output.rs  status.rs
(+151 files in other folders)
