[package]
name = "decklink-sdk"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Julian Waller <git@julusian.co.uk>"]
edition = "2018"
build="build.rs"

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
bitflags = "2.0"
strum = "0.24.1"
strum_macros = "0.24.3"

[build-dependencies]
bindgen = "0.53.1"

[dev-dependencies]
text_io = "0.1.7"