[package]
name = "decklink"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Julian Waller <git@julusian.co.uk>"]
edition = "2021"
build="build.rs"

[dependencies]
num-traits = "0.2"
num-derive = "0.2"
bitflags = "1.0"
strum = "0.15.0"
strum_macros = "0.15.0"

[build-dependencies]
cmake = "0.1.38"

[dev-dependencies]
text_io = "0.1.7"