[package]
name = "decklink"
description = "Blackmagic Decklink bindings for rust"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Julian Waller <git@julusian.co.uk>"]
homepage = "https://github.com/julusian/rust-decklink"
repository = "https://github.com/julusian/rust-decklink"
keywords = ["blackmagic", "decklink", "sdi", "video", "audio"]
edition = "2021"
build="build.rs"
readme = "README.md"
exclude = [
    "gen-bindings.sh",
]

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
bitflags = "2.0"
strum = "0.25"
strum_macros = "0.25"
aligned-vec = "0.5"

[build-dependencies]
cmake = "0.1"

[dev-dependencies]
text_io = "0.1"